[package]
name = "dither"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.image]
version = "0.23"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[profile.bench]
codegen-units = 1
lto = true